syntax = "proto3";

package foreverbull.finance;

option go_package = "github.com/lhjnilsson/foreverbull/pkg/pb/finance";

import "foreverbull/finance/finance.proto";
import "buf/validate/validate.proto";


message GetPortfolioRequest {
}

message GetPortfolioResponse {
    foreverbull.finance.Portfolio portfolio = 1;
}

message GetOrdersRequest {
}

message GetOrdersResponse {
    repeated foreverbull.finance.Order orders = 1;
}

message PlaceOrderRequest {
    foreverbull.finance.Order order = 1 [(buf.validate.field) = {
            required: true,
            cel: {
                id: "order_required",
                expression: "this != null"
            }
        }];
}

message PlaceOrderResponse {
}

service Trading {
    rpc GetPortfolio(GetPortfolioRequest) returns (GetPortfolioResponse) {}
    rpc GetOrders(GetOrdersRequest) returns (GetOrdersResponse) {}
    rpc PlaceOrder(PlaceOrderRequest) returns (PlaceOrderResponse) {}
}
